istio-fortio-exposed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortio
spec:
  containers:
  - name: fortio
    image: fortio/fortio
    command: ["sleep", "3650d"]
